--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,5 +30,5 @@ jobs:
         run: terraform fmt
         
       # Checks that all Terraform configuration files are valid
-      - name: Terraform Validate
-        run: terraform validate
+      #- name: Terraform Validate
+      #  run: terraform validate
